Rafactored solution management.